# internship_enssat_put

./: .gitattributes  README.md  benchmark.ipynb
LiSAM/: README.md  lisam.py  main.py  pcl.py
SegmentAnything/: .gitignore  README.md  classifier.ipynb  classifier.skops  cnn_classification.ipynb  conda_env.yaml  get_mask_from_batch.py  mask.ipynb  segment.ipynb
SegmentAnything/train/: classes.txt  mapping.txt
lidar-segment/: .gitignore  README.md
lidar-segment/cnn/: augmented_dataset.py  cnn.ipynb  cnnAlexNet.ipynb  data.csv  dataset_augmented.csv  modelcnn.pth
lidar-segment/downsamp/: CMakeLists.txt  README.md  sampled.pcd  test.py  voxel_grid.cpp  voxel_grid.py
lidar-segment/lidar-segment/: README.md  fcn_test.ipynb  main.ipynb  projection.ipynb  requirements.txt  template_lidar_segment.py  tif_interpret.ipynb
